syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.analytics";

service AnalyticsService {
  rpc CalculateTimeOrder(TimeOrderRequest) returns (TimeOrderResponse) {}
}

message TimeOrderRequest {
  int64 order_id = 1;
  string promo = 2;
}

message TimeOrderResponse {
  int64 order_id = 1;
  int32 time_score = 2;
}
